# rocket-oidc

./: Cargo.toml  README.md
src/: _main.rs  auth.rs  client.rs  crypto.rs  errors.rs  keycloak.rs  lib.rs  main.rs  public.pem  routes.rs  sign.rs  token.rs  utils.rs
src/server/: callbacks.rs  mod.rs  routes.rs  sign.rs
