[package]
name = "rocket-oidc"
version = "0.1.0"
edition = "2024"
description = "Rocket OpenID Connect utility crate, provides redirect route, and claims guard for OIDC"
license = "LICE

[dependencies]
err-derive = "0.3.1"
jsonwebtoken = "9.3.1"`
openidconnect = "4.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"]}
rocket = "0.5.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
