[package]
name = "rocket-oidc"
version = "0.1.3"
edition = "2024"
description = "Rocket OpenID Connect utility crate, provides redirect route, and claims guard for OIDC"
license = "MIT"

[dependencies]
cookie = "0.18.1"
err-derive = "0.3.1"
jsonwebtoken = "9.3.1"
openidconnect = "4.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"]}
rocket = "0.5.1"
rpassword = "7.4.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
structopt = "0.3.26"
time = "0.3.41"
tokio = "1.45.0"
