[package]
name = "rocket-oidc"
version = "0.1.4"
edition = "2024"
description = "Rocket OpenID Connect utility crate, provides redirect route, and claims guard for OIDC"
license = "MIT"
repository = "https://github.com/vivianlazaras/rocket_oidc"

[dependencies]
base64 = "0.22.1"
cookie = "0.18.1"
err-derive = "0.3.1"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"]}
openidconnect = "4.0.0"
pkcs8 = "0.10.2"
rand = "0.8"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"]}
rocket = "0.5.1"
rpassword = "7.4.0"
rsa = { version = "0.9.8", features = ["pem"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
structopt = "0.3.26"
thiserror = "2.0.17"
time = "0.3.41"
tokio = "1.45.0"
uuid = { version = "1.18.1", features = ["v4"]}
